--- a/projectDevIonic/src/app/app.component.html
+++ b/projectDevIonic/src/app/app.component.html
@@ -7,42 +7,45 @@
           <ion-note>Medical Appointment</ion-note>
 
           <ion-accordion-group>
-            @for(module of appPages; track module) {
-              <ion-menu-toggle auto-hide="false">
-
-                @if(module.subPages) {
-                  <ion-accordion>
-                    <ion-item slot="header" lines="none">
+            <ng-container> 
+              @for(module of appPages; track module) {
+                <ion-menu-toggle auto-hide="false">
+  
+                  @if(module.subPages) {
+                    <ion-accordion>
+                      <ion-item slot="header" lines="none">
+                        <ion-icon aria-hidden="true" slot="start" [ios]="module.icon + '-outline'"
+                          [md]="module.icon + '-sharp'"></ion-icon>
+                        <ion-label>{{ module.title }}</ion-label>
+                      </ion-item>
+  
+                      <ion-list slot="content">
+                        <ion-menu-toggle auto-hide="false" *ngFor="let sub of module.subPages">
+                          <ion-item routerDirection="root" [routerLink]="[sub.url]" lines="none" detail="false"
+                            routerLinkActive="selected">
+                            <ion-icon aria-hidden="true" slot="start" [ios]="sub.icon + '-outline'"
+                              [md]="sub.icon + '-sharp'"></ion-icon>
+                            <ion-label>{{ sub.title }}</ion-label>
+                          </ion-item>
+                        </ion-menu-toggle>
+                      </ion-list>
+                    </ion-accordion>
+                  }
+  
+                  @if(!module.subPages) {
+                    <ion-item routerDirection="root" [routerLink]="[module.url]" lines="none" detail="false"
+                      routerLinkActive="selected">
                       <ion-icon aria-hidden="true" slot="start" [ios]="module.icon + '-outline'"
                         [md]="module.icon + '-sharp'"></ion-icon>
                       <ion-label>{{ module.title }}</ion-label>
                     </ion-item>
-
-                    <ion-list slot="content">
-                      <ion-menu-toggle auto-hide="false" *ngFor="let sub of module.subPages">
-                        <ion-item routerDirection="root" [routerLink]="[sub.url]" lines="none" detail="false"
-                          routerLinkActive="selected">
-                          <ion-icon aria-hidden="true" slot="start" [ios]="sub.icon + '-outline'"
-                            [md]="sub.icon + '-sharp'"></ion-icon>
-                          <ion-label>{{ sub.title }}</ion-label>
-                        </ion-item>
-                      </ion-menu-toggle>
-                    </ion-list>
-                  </ion-accordion>
-                }
-
-                @if(!module.subPages) {
-                  <ion-item routerDirection="root" [routerLink]="[module.url]" lines="none" detail="false"
-                    routerLinkActive="selected">
-                    <ion-icon aria-hidden="true" slot="start" [ios]="module.icon + '-outline'"
-                      [md]="module.icon + '-sharp'"></ion-icon>
-                    <ion-label>{{ module.title }}</ion-label>
-                  </ion-item>
-                }
-
-              </ion-menu-toggle>
-
-            }
+                  }
+  
+                </ion-menu-toggle>
+  
+              }
+            </ng-container>
+            
           </ion-accordion-group>
         </ion-list>
 
