--- a/projectDevIonic/src/app/app.component.html
+++ b/projectDevIonic/src/app/app.component.html
@@ -1,63 +1,7 @@
 <ion-app>
-  <ion-split-pane contentId="main-content">
-    <ion-menu contentId="main-content" type="overlay">
-      <ion-content>
-        <ion-list id="inbox-list">
-          <ion-list-header>Samarian Clever Solution</ion-list-header>
-          <ion-note>Medical Appointment</ion-note>
-
-          <ion-accordion-group>
-            @for(module of appPages; track module) {
-              <ion-menu-toggle auto-hide="false">
-
-                @if(module.subPages) {
-                  <ion-accordion>
-                    <ion-item slot="header" lines="none">
-                      <ion-icon aria-hidden="true" slot="start" [ios]="module.icon + '-outline'"
-                        [md]="module.icon + '-sharp'"></ion-icon>
-                      <ion-label>{{ module.title }}</ion-label>
-                    </ion-item>
-
-                    <ion-list slot="content">
-                      <ion-menu-toggle auto-hide="false" *ngFor="let sub of module.subPages">
-                        <ion-item routerDirection="root" [routerLink]="[sub.url]" lines="none" detail="false"
-                          routerLinkActive="selected">
-                          <ion-icon aria-hidden="true" slot="start" [ios]="sub.icon + '-outline'"
-                            [md]="sub.icon + '-sharp'"></ion-icon>
-                          <ion-label>{{ sub.title }}</ion-label>
-                        </ion-item>
-                      </ion-menu-toggle>
-                    </ion-list>
-                  </ion-accordion>
-                }
-
-                @if(!module.subPages) {
-                  <ion-item routerDirection="root" [routerLink]="[module.url]" lines="none" detail="false"
-                    routerLinkActive="selected">
-                    <ion-icon aria-hidden="true" slot="start" [ios]="module.icon + '-outline'"
-                      [md]="module.icon + '-sharp'"></ion-icon>
-                    <ion-label>{{ module.title }}</ion-label>
-                  </ion-item>
-                }
-
-              </ion-menu-toggle>
-
-            }
-          </ion-accordion-group>
-        </ion-list>
-
-        <ion-list id="labels-list">
-          <ion-list-header>Labels</ion-list-header>
-
-          <ion-item *ngFor="let label of labels" lines="none">
-            <ion-icon aria-hidden="true" slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
-            <ion-label>{{ label }}</ion-label>
-          </ion-item>
-        </ion-list>
-      </ion-content>
-    </ion-menu>
-    <ion-router-outlet id="main-content"></ion-router-outlet>
+  <ion-split-pane [contentId]="idValue">
+    <app-menu [idValue]="idValue"></app-menu>
+    <ion-router-outlet [id]="idValue"></ion-router-outlet>
   </ion-split-pane>
 </ion-app>
-
 <!-- <app-specialty></app-specialty> -->
