--- a/projectDevIonic/src/app/app.component.html
+++ b/projectDevIonic/src/app/app.component.html
@@ -1,7 +1,56 @@
 <ion-app>
-  <ion-split-pane [contentId]="idValue">
-    <app-menu [idValue]="idValue"></app-menu>
-    <ion-router-outlet [id]="idValue"></ion-router-outlet>
+  <!-- <ion-split-pane contentId="main-content"> -->
+    <ion-split-pane [contentId]="idValue">
+      <app-menu [idValue]="idValue"></app-menu>
+    <!-- <ion-menu contentId="main-content" type="overlay">
+      <ion-content>
+        <ion-list id="inbox-list">
+          <ion-list-header>Samarian Clever Solution</ion-list-header>
+          <ion-note>Medical Appointment</ion-note>
+
+          <ion-accordion-group>
+            <ng-container> 
+              @for(module of appPages; track module) {
+  
+                  @if(module.subPages) {
+                    <ion-accordion>
+                      <ion-item slot="header" lines="none" detail="false" button
+                                (click)="handleItemClick(true)">
+                        <ion-icon aria-hidden="true" slot="start" [ios]="module.icon + '-outline'"
+                          [md]="module.icon + '-sharp'"></ion-icon>
+                        <ion-label>{{ module.title }}</ion-label>
+                      </ion-item>
+  
+                      <ion-list slot="content">
+                        <ion-menu-toggle auto-hide="false" *ngFor="let sub of module.subPages">
+                          <ion-item routerDirection="root" [routerLink]="[sub.url]" lines="none" detail="false"
+                            routerLinkActive="selected" (click)="handleItemClick(false)">
+                            <ion-icon aria-hidden="true" slot="start" [ios]="sub.icon + '-outline'"
+                              [md]="sub.icon + '-sharp'"></ion-icon>
+                            <ion-label>{{ sub.title }}</ion-label>
+                          </ion-item>
+                        </ion-menu-toggle>
+                      </ion-list>
+                    </ion-accordion>
+                  }
+  
+                  @if(!module.subPages) {
+                    <ion-menu-toggle auto-hide="false">
+                      <ion-item routerDirection="root" [routerLink]="[module.url]" lines="none" detail="false"
+                        routerLinkActive="selected" (click)="handleItemClick(true)">
+                        <ion-icon aria-hidden="true" slot="start" [ios]="module.icon + '-outline'"
+                          [md]="module.icon + '-sharp'"></ion-icon>
+                        <ion-label>{{ module.title }}</ion-label>
+                      </ion-item>
+                    </ion-menu-toggle>
+                  }
+              }
+            </ng-container>
+          </ion-accordion-group>
+        </ion-list>
+      </ion-content>
+    </ion-menu> -->
+    <ion-router-outlet id="main-content"></ion-router-outlet>
   </ion-split-pane>
 </ion-app>
 <!-- <app-specialty></app-specialty> -->
