--- a/projectDevIonic/src/app/speciality-detail/speciality-detail.page.html
+++ b/projectDevIonic/src/app/speciality-detail/speciality-detail.page.html
@@ -1,13 +1,13 @@
-<ion-header [translucent]="true">
+<!-- <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>{{ specialty }}</ion-title>
+    <ion-title>{{ specialtyDetail }}</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
-<ion-content [fullscreen]="false">
+<!-- <ion-content [fullscreen]="false">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">{{ specialty }}</ion-title>
@@ -18,14 +18,13 @@
     <ion-card>
       <ion-card-header>
         <ion-card-title>{{ cardData.cardTitle }}</ion-card-title>
-        <!-- <ion-card-subtitle>{{ cardData.cardSubtitle }}</ion-card-subtitle> -->
+        <ion-card-subtitle>{{ cardData.cardSubtitle }}</ion-card-subtitle>
       </ion-card-header>
       <ion-card-content>
         <ion-list>
           <ion-item *ngFor="let item of cardData.items">
             <ion-thumbnail slot="start">
               <img (click)="getDetailTrainner(item.label)" [src]="item.thumbnail" alt="Thumbnail Image" />
-              <!-- <span routerLink="./">NAVEGA</span> -->
             </ion-thumbnail>
             <ion-label>{{ item.label }}</ion-label>
           </ion-item>
@@ -35,6 +34,7 @@
     
   </ion-card>
   <router-outlet></router-outlet>
-</ion-content>
+</ion-content> -->
 
+<h2>detalle</h2>
 
